--- a/package.json
+++ b/package.json
@@ -22,5 +22,15 @@
   "bugs": {
     "url": "https://github.com/yoya/image.ts/issues"
   },
-  "homepage": "https://github.com/yoya/image.ts#readme"
+  "homepage": "https://github.com/yoya/image.ts#readme",
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.27.1",
+    "@typescript-eslint/parser": "^5.27.1",
+    "eslint": "^8.17.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-vue": "^9.1.0",
+    "tsc": "^2.0.4",
+    "typescript": "^4.7.3"
+  }
 }
